Added number of cores

--- a/src/main/BUILD
+++ b/src/main/BUILD
@@ -34,3 +34,9 @@ cc_binary(
     srcs = ["async_lambda_main.cc"],
     deps = ["//src/lib:SolutionLib"],
 )
+
+cc_binary(
+    name = "number_of_cores",
+    srcs = ["number_of_cores.cc"],
+    deps = ["//src/lib:SolutionLib"],
+)
