Added conditional variable

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,13 +22,13 @@
       "name": "CodeLLDB",
       "type": "lldb",
       "request": "launch",
-      "program": "${workspaceFolder}/bazel-out/darwin-dbg/bin/src/main/${fileBasenameNoExtension}",
+      "program": "${workspaceFolder}/bazel-out/darwin-dbg/bin/${relativeFileDirname}/${fileBasenameNoExtension}",
       "args": [],
       
       // *** You need to change this part for your own system to work ***
-      // Set sourceMap from output of (readlink -n bazel-cpp-template) to ${workspaceFolder}
+      // Set sourceMap from output of (readlink -n bazel-multithreading_cpp) to ${workspaceFolder}
       "sourceMap": {
-        "/private/var/tmp/_bazel_ari/8b6cf68db0ea2d6ea3f9c3ed5620d651/execroot/__main__": "${workspaceFolder}/"
+        "/private/var/tmp/_bazel_ari/dad7119b573bc0ae968b6dcb52b809b6/execroot/__main__": "${workspaceFolder}/"
       }
     },
   ]
