--- a/src/lib/BUILD
+++ b/src/lib/BUILD
@@ -5,3 +5,10 @@ cc_library(
     hdrs = glob(["**/*.h"]),
     visibility = ["//visibility:public"],
 )
+
+cc_library(
+    name = "csp_lib",
+    hdrs = ["csp/csp.h"],
+    srcs = ["csp/csp.cc"],
+    visibility = ["//visibility:public"],
+)
