--- a/src/main/mutex/BUILD
+++ b/src/main/mutex/BUILD
@@ -17,9 +17,43 @@ cc_binary(
     deps = ["//src/lib:SolutionLib"],
 )
 
+cc_binary(
+    name = "unique_lock_main",
+    srcs = ["unique_lock_main.cc"],
+    deps = ["//src/lib:SolutionLib"],
+)
+
 
 cc_binary(
     name = "shared_mutex_main",
     srcs = ["shared_mutex_main.cc"],
     deps = ["//src/lib:SolutionLib"],
 )
+
+
+cc_binary(
+    name = "scoped_lock_main",
+    srcs = ["scoped_lock_main.cc"],
+    deps = ["//src/lib:SolutionLib"],
+)
+
+cc_binary(
+    name = "conditional_var_main",
+    srcs = ["conditional_var_main.cc"],
+    deps = ["//src/lib:SolutionLib"],
+)
+
+cc_binary(
+    name = "no_lock_main",
+    srcs = ["no_lock_main.cc"],
+    deps = ["//src/lib:SolutionLib"],
+)
+
+cc_binary(
+    name = "lock_guard_multiple_mutex_main",
+    srcs = ["lock_guard_multiple_mutex_main.cc"],
+    deps = ["//src/lib:SolutionLib"],
+)
+
+
+
