Added conditional variable folder under main

--- a/src/main/conditional_variable/BUILD
+++ b/src/main/conditional_variable/BUILD
@@ -2,51 +2,49 @@
 cc_binary(
     name = "main",
     srcs = ["main.cc"],
-    deps = ["//src/lib:SolutionLib"],
+    deps = [],
 )
 
 cc_binary(
     name = "producer_consumer_conditional_var_main",
     srcs = ["producer_consumer_conditional_var_main.cc"],
-    deps = ["//src/lib:SolutionLib"],
+    deps = [],
 )
-
-
 
 cc_binary(
     name = "producer_consumer_lock_main",
     srcs = ["producer_consumer_lock_main.cc"],
-    deps = ["//src/lib:SolutionLib"],
+    deps = [],
 )
 
 cc_binary(
     name = "conditional_var_csp_main",
     srcs = ["conditional_var_csp_main.cc"],
-    deps = ["//src/lib:SolutionLib", "//src/lib:csp_lib"],
+    deps = ["//src/lib:csp_lib"],
 )
 
 cc_binary(
     name = "conditional_var_csp_sync_rcv_main",
     srcs = ["conditional_var_csp_sync_rcv_main.cc"],
-    deps = ["//src/lib:SolutionLib", "//src/lib:csp_lib"],
+    deps = ["//src/lib:csp_lib"],
 )
 
 cc_binary(
     name = "conditional_var_csp_adder_main",
     srcs = ["conditional_var_csp_adder_main.cc"],
-    deps = ["//src/lib:SolutionLib", "//src/lib:csp_lib"],
+    deps = ["//src/lib:csp_lib"],
 )
 
 cc_binary(
     name = "conditional_var_csp_adder_fork_join_main",
     srcs = ["conditional_var_csp_adder_fork_join_main.cc"],
-    deps = ["//src/lib:SolutionLib", "//src/lib:csp_lib"],
+    deps = ["//src/lib:csp_lib"],
 )
 
 cc_binary(
     name = "dining_philosophore_main",
     srcs = ["dining_philosophore_main.cc"],
-    deps = ["//src/lib:SolutionLib", "//src/lib:csp_lib"],
+    deps = ["//src/lib:csp_lib"],
 )
 
 
