--- a/src/main/BUILD
+++ b/src/main/BUILD
@@ -2,41 +2,41 @@
 cc_binary(
     name = "main",
     srcs = ["main.cc"],
-    deps = ["//src/lib:SolutionLib"],
+    deps = ["//src/lib:utility_lib"],
 )
 
 cc_binary(
     name = "vector_of_threads_main",
     srcs = ["vector_of_threads_main.cc"],
-    deps = ["//src/lib:SolutionLib"],
+    deps = ["//src/lib:utility_lib"],
 )
 
 cc_binary(
     name = "lambda_main",
     srcs = ["lambda_main.cc"],
-    deps = ["//src/lib:SolutionLib"],
+    deps = ["//src/lib:utility_lib"],
 )
 
 cc_binary(
     name = "functors_main",
     srcs = ["functors_main.cc"],
-    deps = ["//src/lib:SolutionLib"],
+    deps = ["//src/lib:utility_lib"],
 )
 
 cc_binary(
     name = "async_main",
     srcs = ["async_main.cc"],
-    deps = ["//src/lib:SolutionLib"],
+    deps = ["//src/lib:utility_lib"],
 )
 
 cc_binary(
     name = "async_lambda_main",
     srcs = ["async_lambda_main.cc"],
-    deps = ["//src/lib:SolutionLib"],
+    deps = ["//src/lib:utility_lib"],
 )
 
 cc_binary(
     name = "number_of_cores",
     srcs = ["number_of_cores.cc"],
-    deps = ["//src/lib:SolutionLib"],
+    deps = ["//src/lib:utility_lib"],
 )
