Added new files

--- a/src/main/mutex/BUILD
+++ b/src/main/mutex/BUILD
@@ -2,57 +2,80 @@
 cc_binary(
     name = "main",
     srcs = ["main.cc"],
-    deps = ["//src/lib:SolutionLib"],
+    deps = ["//src/lib:utility_lib"],
 )
 
 cc_binary(
     name = "lock_unlock_main",
     srcs = ["lock_unlock_main.cc"],
-    deps = ["//src/lib:SolutionLib"],
+    deps = ["//src/lib:utility_lib"],
 )
 
 cc_binary(
     name = "lock_guard_main",
     srcs = ["lock_guard_main.cc"],
-    deps = ["//src/lib:SolutionLib"],
+    deps = ["//src/lib:utility_lib"],
 )
 
 cc_binary(
     name = "unique_lock_main",
     srcs = ["unique_lock_main.cc"],
-    deps = ["//src/lib:SolutionLib"],
+    deps = ["//src/lib:utility_lib"],
 )
 
 
 cc_binary(
     name = "shared_mutex_main",
     srcs = ["shared_mutex_main.cc"],
-    deps = ["//src/lib:SolutionLib"],
+    deps = ["//src/lib:utility_lib"],
 )
 
 
 cc_binary(
     name = "scoped_lock_main",
     srcs = ["scoped_lock_main.cc"],
-    deps = ["//src/lib:SolutionLib"],
+    deps = ["//src/lib:utility_lib"],
 )
 
 cc_binary(
     name = "conditional_var_main",
     srcs = ["conditional_var_main.cc"],
-    deps = ["//src/lib:SolutionLib"],
+    deps = ["//src/lib:utility_lib"],
 )
 
 cc_binary(
     name = "no_lock_main",
     srcs = ["no_lock_main.cc"],
-    deps = ["//src/lib:SolutionLib"],
+    deps = ["//src/lib:utility_lib"],
 )
 
 cc_binary(
     name = "lock_guard_multiple_mutex_main",
     srcs = ["lock_guard_multiple_mutex_main.cc"],
-    deps = ["//src/lib:SolutionLib"],
+    deps = ["//src/lib:utility_lib"],
+)
+
+
+cc_binary(
+    name = "test_main",
+    srcs = ["test_main.cc"],
+    deps = ["//src/lib:utility_lib"],
+)
+
+
+
+cc_binary(
+    name = "mutex_seq_cst_main",
+    srcs = ["mutex_seq_cst_main.cc"],
+    deps = ["//src/lib:utility_lib"],
+)
+
+
+
+cc_binary(
+    name = "race_condition_main",
+    srcs = ["race_condition_main.cc"],
+    deps = ["//src/lib:utility_lib"],
 )
 
 
