Added atomic and conditional variables

--- a/src/lib/BUILD
+++ b/src/lib/BUILD
@@ -1,4 +1,5 @@
-# https://docs.bazel.build/versions/master/be/c-cpp.html#cc_library
+load("@rules_cc//cc:defs.bzl", "cc_library")
+
 cc_library(
     name = "utility_lib",
     # srcs = glob(["**/*.cc"]),
@@ -6,3 +7,17 @@ cc_library(
     visibility = ["//visibility:public"],
 )
 
+cc_library(
+    name = "VectorAccumulatorLib",
+    hdrs = ["vector_accumulator.h"],
+    visibility = ["//visibility:public"],
+)
+
+cc_library(
+    name = "RangeAccumulatorLib",
+    hdrs = ["range_accumulator.h"],
+    deps = [
+        "@com_google_benchmark//:benchmark",
+    ],
+    visibility = ["//visibility:public"],
+)
