--- a/tests/BUILD
+++ b/tests/BUILD
@@ -1,3 +1,5 @@
+load("@rules_cc//cc:defs.bzl", "cc_test")
+
 cc_test(
     name = "tests",
     srcs = glob(["**/*.cc"]),
@@ -6,3 +8,22 @@ cc_test(
         "@googletest//:gtest_main",
     ],
 )
+
+cc_test(
+    name = "vector_accumulator_test",
+    srcs = ["vector_accumulator_test.cc"],
+    deps = [
+        "//src/lib:VectorAccumulatorLib",
+        "@googletest//:gtest_main",
+    ],
+)
+
+cc_test(
+    name = "range_accumulator_test",
+    srcs = ["range_accumulator_test.cc"],
+    deps = [
+        "//src/lib:RangeAccumulatorLib",
+        "@googletest//:gtest_main",
+    ],
+)
+
