--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,7 +74,13 @@
     "future": "cpp",
     "shared_mutex": "cpp",
     "condition_variable": "cpp",
-    "random": "cpp"
+    "random": "cpp",
+    "codecvt": "cpp",
+    "list": "cpp",
+    "regex": "cpp",
+    "forward_list": "cpp",
+    "unordered_set": "cpp",
+    "memory_resource": "cpp"
   },
   "lldb.displayFormat": "auto",
   "lldb.showDisassembly": "never",
