--- a/src/main/map_reduce/BUILD
+++ b/src/main/map_reduce/BUILD
@@ -8,3 +8,13 @@ cc_binary(
     ],
     deps = ["//src/main/map_reduce/lib:map_reduce"],
 )
+
+
+cc_binary(
+    name = "count_words_file",
+    srcs = ["count_words_file.cc"],
+    copts = [
+        "-std=c++20",
+    ],
+    deps = ["//src/main/map_reduce/lib:map_reduce"],
+)
